--- a/po/ca.po
+++ b/po/ca.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # Jordi Mas <jmas@softcatala.org>, 2014
 # Josep Lladonosa i Capell <jlladono@gmail.com>, 2013-2014
@@ -16,22 +16,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-01 14:01-0400\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: 2015-09-02 09:43-0400\n"
 "PO-Revision-Date: 2015-08-27 06:40-0400\n"
 "Last-Translator: Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>\n"
 "Language-Team: Catalan (http://www.transifex.com/projects/p/virt-manager/"
 "language/ca/)\n"
 "Language: ca\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Zanata 3.7.1\n"
 
 #: ../virt-manager:56
 msgid "Error starting Virtual Machine Manager"
-msgstr ""
-"S'ha produït un error en iniciar l'eina de gestió de màquines virtuals"
+msgstr "S'ha produït un error en iniciar l'eina de gestió de màquines virtuals"
 
 #: ../virt-manager:221
 msgid "virt-manager requires libvirt 0.6.0 or later."
@@ -101,13 +100,14 @@ msgstr "--memory requereix una quantitat en MiB"
 #: ../virt-install:431
 msgid "--disk storage must be specified (override with --disk none)"
 msgstr ""
-"S'ha d'especificar un emmagatzematge --disk (ho podeu evitar amb --disk "
-"none)"
+"S'ha d'especificar un emmagatzematge --disk (ho podeu evitar amb --disk none)"
 
 #: ../virt-install:439
-msgid "An install method must be specified\n"
+msgid ""
+"An install method must be specified\n"
 "(%(methods)s)"
-msgstr "S'ha d'especificar un mètode d'instal·lació\n"
+msgstr ""
+"S'ha d'especificar un mètode d'instal·lació\n"
 "(%(methods)s)"
 
 #: ../virt-install:446
@@ -136,7 +136,6 @@ msgstr ""
 msgid "Paravirtualized guests cannot install off cdrom media."
 msgstr ""
 "Els convidats paravirtualitzats no es poden instal·lar des d'un mitjà CD-ROM."
-""
 
 #: ../virt-install:473
 msgid "Libvirt version does not support remote --location installs"
@@ -203,8 +202,8 @@ msgstr "La configuració de xarxa del convidat no admet PXE"
 
 #: ../virt-install:553
 msgid ""
-"No operating system detected, VM performance may suffer. Specify an OS with -"
-"-os-variant for optimal results."
+"No operating system detected, VM performance may suffer. Specify an OS with "
+"--os-variant for optimal results."
 msgstr ""
 "No s'ha detectat cap sistema operatiu, el rendiment de la MV pot veure's "
 "afectat. Especifiqueu un sistema operatiu amb --os-variant per obtenir "
@@ -219,9 +218,11 @@ msgid "No console to launch for the guest, defaulting to --wait -1"
 msgstr "Sense consoles per llançar al convidat,  es predetermina a --wait -1"
 
 #: ../virt-install:749
-msgid "\n"
+msgid ""
+"\n"
 "Starting install..."
-msgstr "\n"
+msgstr ""
+"\n"
 "S'està iniciant la instal·lació..."
 
 #: ../virt-install:766
@@ -230,9 +231,11 @@ msgstr "Es va completar la creació del domini."
 
 #: ../virt-install:770
 #, c-format
-msgid "You can restart your domain by running:\n"
+msgid ""
+"You can restart your domain by running:\n"
 "  %s"
-msgstr "Podeu reiniciar el vostre domini amb l'execució:\n"
+msgstr ""
+"Podeu reiniciar el vostre domini amb l'execució:\n"
 "  %s"
 
 #: ../virt-install:773
@@ -479,8 +482,8 @@ msgstr "Nou fitxer a utilitzar com a imatge de disc per al nou convidat"
 
 #: ../virt-clone:129
 msgid ""
-"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-copy="
-"hdc)"
+"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-"
+"copy=hdc)"
 msgstr ""
 "Força la còpia de dispositius (p. e., si 'hdc' és un dispositiu de CD-ROM de "
 "només lectura, --force-copy=hdc)"
@@ -526,7 +529,8 @@ msgid ""
 msgstr ""
 "Converteix un aparell OVF o VMX a XML de libvirt natiu, i executa el "
 "convidat.\n"
-"Els continguts de la MV no queden alterats. Les imatges de disc es copien a \n"
+"Els continguts de la MV no queden alterats. Les imatges de disc es copien "
+"a \n"
 "la ubicació d'emmagatzematge per defecte de l'hipervisor.\n"
 "\n"
 "Exemples:\n"
@@ -556,8 +560,8 @@ msgid ""
 "Destination directory the disk images should be converted/copied to. "
 "Defaults to the default libvirt directory."
 msgstr ""
-"Directori de destinació on les imatges de disc s'haurien de convertir/copiar."
-" Per defecte és el directori per defecte de libvirt."
+"Directori de destinació on les imatges de disc s'haurien de convertir/"
+"copiar. Per defecte és el directori per defecte de libvirt."
 
 #: ../virt-convert:123
 #, c-format
@@ -696,9 +700,11 @@ msgstr ""
 "--remove-device --disk /algun/cami"
 
 #: ../virt-xml:353
-msgid "Add specified device. Example:\n"
+msgid ""
+"Add specified device. Example:\n"
 "--add-device --disk ..."
-msgstr "Afegeix el dispositiu especificat. Exemple:\n"
+msgstr ""
+"Afegeix el dispositiu especificat. Exemple:\n"
 "--add-device --disk ..."
 
 #: ../virt-xml:356
@@ -851,7 +857,6 @@ msgstr ""
 "%s ja té un controlador USB associat.\n"
 "Afegir més d'un controlador USB no està admès.\n"
 "Podeu canviar el tipus de controlador USB en la pantalla de detalls de la MV."
-""
 
 #: ../virtManager/addhardware.py:1119
 msgid "Error"
@@ -1183,7 +1188,8 @@ msgid "Cannot clone unmanaged remote storage."
 msgstr "No es pot clonar un emmagatzematge remot no gestionat."
 
 #: ../virtManager/clone.py:84
-msgid "Block devices to clone must be libvirt\n"
+msgid ""
+"Block devices to clone must be libvirt\n"
 "managed storage volumes."
 msgstr ""
 "Els dispositius de bloc per clonar han\n"
@@ -1484,7 +1490,8 @@ msgstr "No s'ha trobat cap connexió activa on instal·lar."
 
 #: ../virtManager/create.py:424
 #, python-format
-msgid "Failed to setup UEFI for AArch64: %s\n"
+msgid ""
+"Failed to setup UEFI for AArch64: %s\n"
 "Install options are limited."
 msgstr ""
 "Va fallar la configuració de la UEFI per a l'AArch64: %s\n"
@@ -1655,8 +1662,7 @@ msgstr "S'ha produït un error en definir els paràmetres de l'instal·lador."
 
 #: ../virtManager/create.py:1582
 msgid "Error setting install media location."
-msgstr ""
-"S'ha produït un error en definir la ubicació del mitjà d'instal·lació."
+msgstr "S'ha produït un error en definir la ubicació del mitjà d'instal·lació."
 
 #: ../virtManager/create.py:1606
 #, python-format
@@ -2049,10 +2055,12 @@ msgstr "Esteu segur que voleu suprimir l'emmagatzematge?"
 
 #: ../virtManager/delete.py:143
 #, python-format
-msgid "The following paths will be deleted:\n"
+msgid ""
+"The following paths will be deleted:\n"
 "\n"
 "%s"
-msgstr "Els següents camins se suprimiran:\n"
+msgstr ""
+"Els següents camins se suprimiran:\n"
 "\n"
 "%s"
 
@@ -2117,7 +2125,8 @@ msgstr "L'emmagatzematge està marcat com a recurs compartit."
 
 #: ../virtManager/delete.py:400
 #, python-format
-msgid "Storage is in use by the following virtual machines:\n"
+msgid ""
+"Storage is in use by the following virtual machines:\n"
 "- %s "
 msgstr ""
 "L'emmagatzematge s'està utilitzant per les següents màquines virtuals:\n"
@@ -2331,8 +2340,7 @@ msgstr "No s'ha pogut eliminar el dispositiu de la màquina en execució"
 
 #: ../virtManager/details.py:2358
 msgid "This change will take effect after the next guest shutdown."
-msgstr ""
-"Aquest canvi tindrà efecte després de la següent aturada del convidat."
+msgstr "Aquest canvi tindrà efecte després de la següent aturada del convidat."
 
 #: ../virtManager/details.py:2480
 msgid "Error while inspecting the guest configuration"
@@ -2557,8 +2565,7 @@ msgstr ""
 #: ../virtManager/domain.py:1450
 msgid "Cannot resume guest while cloning operation in progress"
 msgstr ""
-"No es pot reprendre un convidat mentre hi ha una operació de clonatge en "
-"curs"
+"No es pot reprendre un convidat mentre hi ha una operació de clonatge en curs"
 
 #: ../virtManager/domain.py:1459
 msgid "Saving domain to disk"
@@ -2630,7 +2637,8 @@ msgstr ""
 "per connectar amb aquest amfitrió."
 
 #: ../virtManager/engine.py:618
-msgid "Verify that the 'libvirtd' daemon is running\n"
+msgid ""
+"Verify that the 'libvirtd' daemon is running\n"
 "on the remote host."
 msgstr ""
 "Verifiqueu que el dimoni 'libvirtd' s'estigui executant\n"
@@ -3074,12 +3082,14 @@ msgstr "E/S de la xarxa"
 
 #: ../virtManager/manager.py:511
 #, python-format
-msgid "This will remove the connection:\n"
+msgid ""
+"This will remove the connection:\n"
 "\n"
 "%s\n"
 "\n"
 "Are you sure?"
-msgstr "Això eliminarà la connexió:\n"
+msgstr ""
+"Això eliminarà la connexió:\n"
 "\n"
 "%s\n"
 "\n"
@@ -3145,9 +3155,9 @@ msgstr ""
 
 #: ../virtManager/migrate.py:228
 msgid ""
-"The destination's hostname is 'localhost', which will be rejected by libvirt."
-" You must configure the destination to have a valid publicly accessible "
-"hostname."
+"The destination's hostname is 'localhost', which will be rejected by "
+"libvirt. You must configure the destination to have a valid publicly "
+"accessible hostname."
 msgstr ""
 "El nom de servidor de destinació és 'localhost', el qual libvirt rebutjarà. "
 "Heu de configurar la destinació de manera que tingui un nom de servidor "
@@ -3321,8 +3331,7 @@ msgstr "La consola sèrie no està disponible per a un convidat inactiu"
 #: ../virtManager/serialcon.py:287
 #, python-format
 msgid "Console for device type '%s' not yet supported"
-msgstr ""
-"Encara no està implementada la consola per al tipus de dispositiu «%s»"
+msgstr "Encara no està implementada la consola per al tipus de dispositiu «%s»"
 
 #: ../virtManager/serialcon.py:292
 #, python-format
@@ -3661,9 +3670,11 @@ msgstr ""
 
 #: ../virtconv/vmx.py:87
 #, python-format
-msgid "Syntax error at line %d: %s\n"
+msgid ""
+"Syntax error at line %d: %s\n"
 "%s"
-msgstr "Error de sintaxi a la línia %d: %s\n"
+msgstr ""
+"Error de sintaxi a la línia %d: %s\n"
 "%s"
 
 #: ../virtconv/vmx.py:125
@@ -3764,8 +3775,8 @@ msgid ""
 "Unable to connect to graphical console: virt-viewer not installed. Please "
 "install the 'virt-viewer' package."
 msgstr ""
-"No s'ha pogut connectar a la consola gràfica: virt-viewer no està instal·lat."
-" Si us plau, instal·leu el paquet 'virt-viewer'."
+"No s'ha pogut connectar a la consola gràfica: virt-viewer no està "
+"instal·lat. Si us plau, instal·leu el paquet 'virt-viewer'."
 
 #: ../virtinst/cli.py:470
 msgid "Graphics requested but DISPLAY is not set. Not running virt-viewer."
@@ -3853,9 +3864,11 @@ msgstr ""
 "--vcpus sockets=2,cores=4,threads=2,"
 
 #: ../virtinst/cli.py:585
-msgid "CPU model and features. Ex:\n"
+msgid ""
+"CPU model and features. Ex:\n"
 "--cpu coreduo,+x2apic\n"
-msgstr "Model i característiques de CPU. P. ex.:\n"
+msgstr ""
+"Model i característiques de CPU. P. ex.:\n"
 "--cpu coreduo,+x2apic\n"
 
 #: ../virtinst/cli.py:596
@@ -3924,8 +3937,7 @@ msgstr ""
 "Configura una connexió de consola de text entre el convidat i l'amfitrió"
 
 #: ../virtinst/cli.py:631
-msgid ""
-"Configure physical USB/PCI/etc host devices to be shared with the guest"
+msgid "Configure physical USB/PCI/etc host devices to be shared with the guest"
 msgstr ""
 "Configura els dispositius físics USB/PCI/etc de l'amfitrió a compartir amb "
 "el convidat"
@@ -3953,7 +3965,8 @@ msgid "Configure guest video hardware."
 msgstr "Configura el maquinari de vídeo del convidat."
 
 #: ../virtinst/cli.py:659
-msgid "Configure a guest smartcard device. Ex:\n"
+msgid ""
+"Configure a guest smartcard device. Ex:\n"
 "--smartcard mode=passthrough"
 msgstr ""
 "Configura un dispositiu de targetes intel·ligents del convidat. P. ex.\n"
@@ -3968,26 +3981,32 @@ msgstr ""
 "--redirdev usb,type=tcp,server=192.168.1.1:4000"
 
 #: ../virtinst/cli.py:665
-msgid "Configure a guest memballoon device. Ex:\n"
+msgid ""
+"Configure a guest memballoon device. Ex:\n"
 "--memballoon model=virtio"
 msgstr ""
 "Configura un dispositiu memballoon del convidat. P. ex.:\n"
 "--memballoon model=virtio"
 
 #: ../virtinst/cli.py:668
-msgid "Configure a guest TPM device. Ex:\n"
+msgid ""
+"Configure a guest TPM device. Ex:\n"
 "--tpm /dev/tpm"
-msgstr "Configura un dispositiu TPM del convidat. P. ex.:\n"
+msgstr ""
+"Configura un dispositiu TPM del convidat. P. ex.:\n"
 "--tpm /dev/tpm"
 
 #: ../virtinst/cli.py:671
-msgid "Configure a guest RNG device. Ex:\n"
+msgid ""
+"Configure a guest RNG device. Ex:\n"
 "--rng /dev/random"
-msgstr "Configura un dispositiu RNG del convidat. P. ex.:\n"
+msgstr ""
+"Configura un dispositiu RNG del convidat. P. ex.:\n"
 "--rng /dev/random"
 
 #: ../virtinst/cli.py:674
-msgid "Configure a guest panic device. Ex:\n"
+msgid ""
+"Configure a guest panic device. Ex:\n"
 "--panic default"
 msgstr ""
 "Configura un dispositiu de pànic del convidat. P. ex.:\n"
@@ -4131,8 +4150,7 @@ msgstr ""
 #: ../virtinst/cli.py:2113
 #, python-format
 msgid "%(devtype)s type '%(chartype)s' does not support '%(optname)s' option."
-msgstr ""
-"El %(devtype)s de tipus '%(chartype)s' no admet l'opció '%(optname)s'."
+msgstr "El %(devtype)s de tipus '%(chartype)s' no admet l'opció '%(optname)s'."
 
 #: ../virtinst/cloner.py:90
 msgid "Original xml must be a string."
@@ -4660,7 +4678,6 @@ msgstr "Si el STP està habilitat al pont"
 msgid "Delay in seconds before forwarding begins when joining a network."
 msgstr ""
 "Retard en segons abans que el reenviament comenci en fer la unió a una xarxa."
-""
 
 #: ../virtinst/interface.py:204
 msgid "Mode of operation of the bonding device"
@@ -4963,8 +4980,8 @@ msgid ""
 "There is not enough free space on the storage pool to create the volume. (%d "
 "M requested allocation > %d M available)"
 msgstr ""
-"No hi ha prou espai lliure per crear el volum en la reserva d'emmagatzematge."
-" (%d M assignació demanada > %d M disponible)"
+"No hi ha prou espai lliure per crear el volum en la reserva "
+"d'emmagatzematge. (%d M assignació demanada > %d M disponible)"
 
 #: ../virtinst/storage.py:871
 #, python-format
@@ -5358,8 +5375,7 @@ msgstr "Clona la màquina virtual"
 
 #: ../ui/clone.ui.h:2
 msgid "<span size='large' color='white'>Clone virtual machine</span>"
-msgstr ""
-"<span size='large' color='white'>Clonació de la màquina virtual</span>"
+msgstr "<span size='large' color='white'>Clonació de la màquina virtual</span>"
 
 #: ../ui/clone.ui.h:3
 msgid "Create clone based on:"
@@ -5579,9 +5595,11 @@ msgid "Architecture options"
 msgstr "Opcions d'arquitectura"
 
 #: ../ui/create.ui.h:16
-msgid "Error message\n"
+msgid ""
+"Error message\n"
 "bar"
-msgstr "Barra de missatges\n"
+msgstr ""
+"Barra de missatges\n"
 "d'error"
 
 #: ../ui/create.ui.h:19
@@ -7416,9 +7434,11 @@ msgid "CPU _default:"
 msgstr "Valors per _defecte per a la CPU:"
 
 #: ../ui/preferences.ui.h:21
-msgid "Add Spice _USB\n"
+msgid ""
+"Add Spice _USB\n"
 "Redirection:"
-msgstr "Afegeix redireccionament\n"
+msgstr ""
+"Afegeix redireccionament\n"
 "_USB d'SPICE:"
 
 #: ../ui/preferences.ui.h:23
