--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # Andi Chandler <andi@gowling.com>, 2013-2014
 # Andi Chandler <andi@gowling.com>, 2013-2015
@@ -11,15 +11,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-01 14:01-0400\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: 2015-09-02 09:43-0400\n"
 "PO-Revision-Date: 2015-05-05 01:48-0400\n"
 "Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/"
 "virt-manager/language/en_GB/)\n"
 "Language: en-GB\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Zanata 3.7.1\n"
 
@@ -98,9 +98,11 @@ msgid "--disk storage must be specified (override with --disk none)"
 msgstr "--disk storage must be specified (override with --disk none)"
 
 #: ../virt-install:439
-msgid "An install method must be specified\n"
+msgid ""
+"An install method must be specified\n"
 "(%(methods)s)"
-msgstr "An install method must be specified\n"
+msgstr ""
+"An install method must be specified\n"
 "(%(methods)s)"
 
 #: ../virt-install:446
@@ -185,11 +187,11 @@ msgstr "The guest's network configuration does not support PXE"
 
 #: ../virt-install:553
 msgid ""
-"No operating system detected, VM performance may suffer. Specify an OS with -"
-"-os-variant for optimal results."
+"No operating system detected, VM performance may suffer. Specify an OS with "
+"--os-variant for optimal results."
 msgstr ""
-"No operating system detected, VM performance may suffer. Specify an OS with -"
-"-os-variant for optimal results."
+"No operating system detected, VM performance may suffer. Specify an OS with "
+"--os-variant for optimal results."
 
 #: ../virt-install:573
 msgid "A disk device must be specified with --import."
@@ -200,9 +202,11 @@ msgid "No console to launch for the guest, defaulting to --wait -1"
 msgstr "No console to launch for the guest, defaulting to --wait -1"
 
 #: ../virt-install:749
-msgid "\n"
+msgid ""
+"\n"
 "Starting install..."
-msgstr "\n"
+msgstr ""
+"\n"
 "Starting install..."
 
 #: ../virt-install:766
@@ -211,9 +215,11 @@ msgstr "Domain creation completed."
 
 #: ../virt-install:770
 #, c-format
-msgid "You can restart your domain by running:\n"
+msgid ""
+"You can restart your domain by running:\n"
 "  %s"
-msgstr "You can restart your domain by running:\n"
+msgstr ""
+"You can restart your domain by running:\n"
 "  %s"
 
 #: ../virt-install:773
@@ -456,11 +462,11 @@ msgstr "New file to use as the disk image for the new guest"
 
 #: ../virt-clone:129
 msgid ""
-"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-copy="
-"hdc)"
+"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-"
+"copy=hdc)"
 msgstr ""
-"Force to copy devices (eg, if 'hdc' is a readonly CDROM device, --force-copy="
-"hdc)"
+"Force to copy devices (eg, if 'hdc' is a readonly CDROM device, --force-"
+"copy=hdc)"
 
 #: ../virt-clone:133
 msgid "Do not use a sparse file for the clone's disk image"
@@ -669,9 +675,11 @@ msgstr ""
 "--remove-device --disk /some/path"
 
 #: ../virt-xml:353
-msgid "Add specified device. Example:\n"
+msgid ""
+"Add specified device. Example:\n"
 "--add-device --disk ..."
-msgstr "Add specified device. Example:\n"
+msgstr ""
+"Add specified device. Example:\n"
 "--add-device --disk ..."
 
 #: ../virt-xml:356
@@ -1046,8 +1054,7 @@ msgstr "Default pool is not active."
 #: ../virtManager/addstorage.py:110
 #, python-format
 msgid "Storage pool '%s' is not active. Would you like to start the pool now?"
-msgstr ""
-"Storage pool '%s' is not active. Would you like to start the pool now?"
+msgstr "Storage pool '%s' is not active. Would you like to start the pool now?"
 
 #: ../virtManager/addstorage.py:121
 #, python-format
@@ -1146,9 +1153,11 @@ msgid "Cannot clone unmanaged remote storage."
 msgstr "Cannot clone unmanaged remote storage."
 
 #: ../virtManager/clone.py:84
-msgid "Block devices to clone must be libvirt\n"
+msgid ""
+"Block devices to clone must be libvirt\n"
 "managed storage volumes."
-msgstr "Block devices to clone must be libvirt\n"
+msgstr ""
+"Block devices to clone must be libvirt\n"
 "managed storage volumes."
 
 #: ../virtManager/clone.py:87 ../virtManager/delete.py:362
@@ -1443,9 +1452,11 @@ msgstr "No active connection to install on."
 
 #: ../virtManager/create.py:424
 #, python-format
-msgid "Failed to setup UEFI for AArch64: %s\n"
+msgid ""
+"Failed to setup UEFI for AArch64: %s\n"
 "Install options are limited."
-msgstr "Failed to setup UEFI for AArch64: %s\n"
+msgstr ""
+"Failed to setup UEFI for AArch64: %s\n"
 "Install options are limited."
 
 #: ../virtManager/create.py:450
@@ -2000,10 +2011,12 @@ msgstr "Are you sure you want to delete the storage?"
 
 #: ../virtManager/delete.py:143
 #, python-format
-msgid "The following paths will be deleted:\n"
+msgid ""
+"The following paths will be deleted:\n"
 "\n"
 "%s"
-msgstr "The following paths will be deleted:\n"
+msgstr ""
+"The following paths will be deleted:\n"
 "\n"
 "%s"
 
@@ -2064,9 +2077,11 @@ msgstr "Storage is marked as shareable."
 
 #: ../virtManager/delete.py:400
 #, python-format
-msgid "Storage is in use by the following virtual machines:\n"
+msgid ""
+"Storage is in use by the following virtual machines:\n"
 "- %s "
-msgstr "Storage is in use by the following virtual machines:\n"
+msgstr ""
+"Storage is in use by the following virtual machines:\n"
 "- %s "
 
 #: ../virtManager/details.py:163
@@ -2126,7 +2141,8 @@ msgstr "Watchdog"
 #: ../virtManager/details.py:622
 #, fuzzy
 msgid "This will abort the installation. Are you sure?"
-msgstr "This will remove the connection:\n"
+msgstr ""
+"This will remove the connection:\n"
 "\n"
 "%s\n"
 "\n"
@@ -2567,9 +2583,11 @@ msgstr ""
 "to connect to this host."
 
 #: ../virtManager/engine.py:618
-msgid "Verify that the 'libvirtd' daemon is running\n"
+msgid ""
+"Verify that the 'libvirtd' daemon is running\n"
 "on the remote host."
-msgstr "Verify that the 'libvirtd' daemon is running\n"
+msgstr ""
+"Verify that the 'libvirtd' daemon is running\n"
 "on the remote host."
 
 #: ../virtManager/engine.py:622
@@ -3011,12 +3029,14 @@ msgstr "Network I/O"
 
 #: ../virtManager/manager.py:511
 #, python-format
-msgid "This will remove the connection:\n"
+msgid ""
+"This will remove the connection:\n"
 "\n"
 "%s\n"
 "\n"
 "Are you sure?"
-msgstr "This will remove the connection:\n"
+msgstr ""
+"This will remove the connection:\n"
 "\n"
 "%s\n"
 "\n"
@@ -3082,13 +3102,13 @@ msgstr ""
 
 #: ../virtManager/migrate.py:228
 msgid ""
-"The destination's hostname is 'localhost', which will be rejected by libvirt."
-" You must configure the destination to have a valid publicly accessible "
-"hostname."
+"The destination's hostname is 'localhost', which will be rejected by "
+"libvirt. You must configure the destination to have a valid publicly "
+"accessible hostname."
 msgstr ""
-"The destination's hostname is 'localhost', which will be rejected by libvirt."
-" You must configure the destination to have a valid publicly accessible "
-"hostname."
+"The destination's hostname is 'localhost', which will be rejected by "
+"libvirt. You must configure the destination to have a valid publicly "
+"accessible hostname."
 
 #: ../virtManager/migrate.py:295
 msgid "Hypervisors do not match"
@@ -3594,9 +3614,11 @@ msgstr ""
 
 #: ../virtconv/vmx.py:87
 #, python-format
-msgid "Syntax error at line %d: %s\n"
+msgid ""
+"Syntax error at line %d: %s\n"
 "%s"
-msgstr "Syntax error at line %d: %s\n"
+msgstr ""
+"Syntax error at line %d: %s\n"
 "%s"
 
 #: ../virtconv/vmx.py:125
@@ -3778,9 +3800,11 @@ msgstr ""
 "--vcpus sockets=2,cores=4,threads=2,"
 
 #: ../virtinst/cli.py:585
-msgid "CPU model and features. Ex:\n"
+msgid ""
+"CPU model and features. Ex:\n"
 "--cpu coreduo,+x2apic\n"
-msgstr "CPU model and features. Ex:\n"
+msgstr ""
+"CPU model and features. Ex:\n"
 "--cpu coreduo,+x2apic\n"
 
 #: ../virtinst/cli.py:596
@@ -3848,8 +3872,7 @@ msgid "Configure a text console connection between the guest and host"
 msgstr "Configure a text console connection between the guest and host"
 
 #: ../virtinst/cli.py:631
-msgid ""
-"Configure physical USB/PCI/etc host devices to be shared with the guest"
+msgid "Configure physical USB/PCI/etc host devices to be shared with the guest"
 msgstr ""
 "Configure physical USB/PCI/etc host devices to be shared with the guest"
 
@@ -3876,9 +3899,11 @@ msgid "Configure guest video hardware."
 msgstr "Configure guest video hardware."
 
 #: ../virtinst/cli.py:659
-msgid "Configure a guest smartcard device. Ex:\n"
+msgid ""
+"Configure a guest smartcard device. Ex:\n"
 "--smartcard mode=passthrough"
-msgstr "Configure a guest smartcard device. Ex:\n"
+msgstr ""
+"Configure a guest smartcard device. Ex:\n"
 "--smartcard mode=passthrough"
 
 #: ../virtinst/cli.py:662
@@ -3890,27 +3915,35 @@ msgstr ""
 "--redirdev usb,type=tcp,server=192.168.1.1:4000"
 
 #: ../virtinst/cli.py:665
-msgid "Configure a guest memballoon device. Ex:\n"
+msgid ""
+"Configure a guest memballoon device. Ex:\n"
 "--memballoon model=virtio"
-msgstr "Configure a guest memballoon device. Ex:\n"
+msgstr ""
+"Configure a guest memballoon device. Ex:\n"
 "--memballoon model=virtio"
 
 #: ../virtinst/cli.py:668
-msgid "Configure a guest TPM device. Ex:\n"
+msgid ""
+"Configure a guest TPM device. Ex:\n"
 "--tpm /dev/tpm"
-msgstr "Configure a guest TPM device. Ex:\n"
+msgstr ""
+"Configure a guest TPM device. Ex:\n"
 "--tpm /dev/tpm"
 
 #: ../virtinst/cli.py:671
-msgid "Configure a guest RNG device. Ex:\n"
+msgid ""
+"Configure a guest RNG device. Ex:\n"
 "--rng /dev/random"
-msgstr "Configure a guest RNG device. Ex:\n"
+msgstr ""
+"Configure a guest RNG device. Ex:\n"
 "--rng /dev/random"
 
 #: ../virtinst/cli.py:674
-msgid "Configure a guest panic device. Ex:\n"
+msgid ""
+"Configure a guest panic device. Ex:\n"
 "--panic default"
-msgstr "Configure a guest panic device. Ex:\n"
+msgstr ""
+"Configure a guest panic device. Ex:\n"
 "--panic default"
 
 #: ../virtinst/cli.py:680
@@ -4049,8 +4082,7 @@ msgstr "Didn't match keymap '%s' in keytable!"
 #: ../virtinst/cli.py:2113
 #, python-format
 msgid "%(devtype)s type '%(chartype)s' does not support '%(optname)s' option."
-msgstr ""
-"%(devtype)s type '%(chartype)s' does not support '%(optname)s' option."
+msgstr "%(devtype)s type '%(chartype)s' does not support '%(optname)s' option."
 
 #: ../virtinst/cloner.py:90
 msgid "Original xml must be a string."
@@ -5465,9 +5497,11 @@ msgid "Architecture options"
 msgstr "Architecture options"
 
 #: ../ui/create.ui.h:16
-msgid "Error message\n"
+msgid ""
+"Error message\n"
 "bar"
-msgstr "Error message\n"
+msgstr ""
+"Error message\n"
 "bar"
 
 #: ../ui/create.ui.h:19
@@ -7290,9 +7324,11 @@ msgid "CPU _default:"
 msgstr "CPU _default:"
 
 #: ../ui/preferences.ui.h:21
-msgid "Add Spice _USB\n"
+msgid ""
+"Add Spice _USB\n"
 "Redirection:"
-msgstr "Add Spice _USB\n"
+msgstr ""
+"Add Spice _USB\n"
 "Redirection:"
 
 #: ../ui/preferences.ui.h:23
