--- a/po/tr.po
+++ b/po/tr.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # Ismail ASCI <ismail.asci@gmail.com>, 2006
 # m.ali sag <muhammetalisag@gmail.com>, 2013
@@ -13,15 +13,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-01 14:01-0400\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: 2015-09-02 09:43-0400\n"
 "PO-Revision-Date: 2015-05-01 09:10-0400\n"
 "Last-Translator: Cole Robinson <crobinso@redhat.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/projects/p/virt-manager/"
 "language/tr/)\n"
 "Language: tr\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Zanata 3.7.1\n"
 
@@ -103,9 +103,11 @@ msgid "--disk storage must be specified (override with --disk none)"
 msgstr ""
 
 #: ../virt-install:439
-msgid "An install method must be specified\n"
+msgid ""
+"An install method must be specified\n"
 "(%(methods)s)"
-msgstr "Bir kurulum yöntemi belirtilmesi zorunludur\n"
+msgstr ""
+"Bir kurulum yöntemi belirtilmesi zorunludur\n"
 "(%(methods)s)"
 
 #: ../virt-install:446
@@ -182,8 +184,8 @@ msgstr "Konuk makinenin ağ yapılandırması PXE desteğine sahip değil"
 
 #: ../virt-install:553
 msgid ""
-"No operating system detected, VM performance may suffer. Specify an OS with -"
-"-os-variant for optimal results."
+"No operating system detected, VM performance may suffer. Specify an OS with "
+"--os-variant for optimal results."
 msgstr ""
 
 #: ../virt-install:573
@@ -196,9 +198,11 @@ msgid "No console to launch for the guest, defaulting to --wait -1"
 msgstr ""
 
 #: ../virt-install:749
-msgid "\n"
+msgid ""
+"\n"
 "Starting install..."
-msgstr "\n"
+msgstr ""
+"\n"
 "Kurulum başlatılıyor..."
 
 #: ../virt-install:766
@@ -207,7 +211,8 @@ msgstr ""
 
 #: ../virt-install:770
 #, c-format
-msgid "You can restart your domain by running:\n"
+msgid ""
+"You can restart your domain by running:\n"
 "  %s"
 msgstr ""
 
@@ -429,8 +434,8 @@ msgstr ""
 
 #: ../virt-clone:129
 msgid ""
-"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-copy="
-"hdc)"
+"Force to copy devices (eg, if 'hdc' is a readonly cdrom device, --force-"
+"copy=hdc)"
 msgstr ""
 
 #: ../virt-clone:133
@@ -616,7 +621,8 @@ msgid ""
 msgstr ""
 
 #: ../virt-xml:353
-msgid "Add specified device. Example:\n"
+msgid ""
+"Add specified device. Example:\n"
 "--add-device --disk ..."
 msgstr ""
 
@@ -1084,7 +1090,8 @@ msgid "Cannot clone unmanaged remote storage."
 msgstr "Yönetim altına alınmamış uzak depolama klonlanamaz."
 
 #: ../virtManager/clone.py:84
-msgid "Block devices to clone must be libvirt\n"
+msgid ""
+"Block devices to clone must be libvirt\n"
 "managed storage volumes."
 msgstr ""
 
@@ -1368,7 +1375,8 @@ msgstr "Kurulum yapılacak bir aktif bağlantı bulunmuyor"
 
 #: ../virtManager/create.py:424
 #, python-format
-msgid "Failed to setup UEFI for AArch64: %s\n"
+msgid ""
+"Failed to setup UEFI for AArch64: %s\n"
 "Install options are limited."
 msgstr ""
 
@@ -1499,8 +1507,7 @@ msgstr "Varsayılan aygıtlar ayarlanırken hata oluştu:"
 #: ../virtManager/create.py:1446 ../virtManager/createinterface.py:906
 #, python-format
 msgid "Uncaught error validating install parameters: %s"
-msgstr ""
-"Kurulum parametreleri doğrulanırken, ele alınmayan bir hata oluştu: %s"
+msgstr "Kurulum parametreleri doğrulanırken, ele alınmayan bir hata oluştu: %s"
 
 #: ../virtManager/create.py:1496
 msgid "Please specify a valid OS variant."
@@ -1918,7 +1925,8 @@ msgstr "Depolamayı silmek istediğinizden emin misiniz?"
 
 #: ../virtManager/delete.py:143
 #, python-format
-msgid "The following paths will be deleted:\n"
+msgid ""
+"The following paths will be deleted:\n"
 "\n"
 "%s"
 msgstr ""
@@ -1980,7 +1988,8 @@ msgstr "Depolama paylaşılabilir olarak işaretlenmiş."
 
 #: ../virtManager/delete.py:400
 #, python-format
-msgid "Storage is in use by the following virtual machines:\n"
+msgid ""
+"Storage is in use by the following virtual machines:\n"
 "- %s "
 msgstr ""
 
@@ -2041,7 +2050,8 @@ msgstr "Gözlemci"
 #: ../virtManager/details.py:622
 #, fuzzy
 msgid "This will abort the installation. Are you sure?"
-msgstr "Bu işlem bağlantıyı silecektir:\n"
+msgstr ""
+"Bu işlem bağlantıyı silecektir:\n"
 "\n"
 "%s\n"
 "\n"
@@ -2460,9 +2470,11 @@ msgstr ""
 "ya da benzeri bir yazılım kurmanız gereklidir."
 
 #: ../virtManager/engine.py:618
-msgid "Verify that the 'libvirtd' daemon is running\n"
+msgid ""
+"Verify that the 'libvirtd' daemon is running\n"
 "on the remote host."
-msgstr "Uzak makinede 'libvirtd' servisinin \n"
+msgstr ""
+"Uzak makinede 'libvirtd' servisinin \n"
 "çalıştığını doğrulayınız."
 
 #: ../virtManager/engine.py:622
@@ -2890,12 +2902,14 @@ msgstr "Ağ I/O"
 
 #: ../virtManager/manager.py:511
 #, python-format
-msgid "This will remove the connection:\n"
+msgid ""
+"This will remove the connection:\n"
 "\n"
 "%s\n"
 "\n"
 "Are you sure?"
-msgstr "Bu işlem bağlantıyı silecektir:\n"
+msgstr ""
+"Bu işlem bağlantıyı silecektir:\n"
 "\n"
 "%s\n"
 "\n"
@@ -2958,9 +2972,9 @@ msgstr ""
 
 #: ../virtManager/migrate.py:228
 msgid ""
-"The destination's hostname is 'localhost', which will be rejected by libvirt."
-" You must configure the destination to have a valid publicly accessible "
-"hostname."
+"The destination's hostname is 'localhost', which will be rejected by "
+"libvirt. You must configure the destination to have a valid publicly "
+"accessible hostname."
 msgstr ""
 
 #: ../virtManager/migrate.py:295
@@ -3454,9 +3468,11 @@ msgstr ""
 
 #: ../virtconv/vmx.py:87
 #, python-format
-msgid "Syntax error at line %d: %s\n"
+msgid ""
+"Syntax error at line %d: %s\n"
 "%s"
-msgstr "%d satırında söz dizimi hatası: %s\n"
+msgstr ""
+"%d satırında söz dizimi hatası: %s\n"
 "%s"
 
 #: ../virtconv/vmx.py:125
@@ -3616,7 +3632,8 @@ msgid ""
 msgstr ""
 
 #: ../virtinst/cli.py:585
-msgid "CPU model and features. Ex:\n"
+msgid ""
+"CPU model and features. Ex:\n"
 "--cpu coreduo,+x2apic\n"
 msgstr ""
 
@@ -3669,8 +3686,7 @@ msgid "Configure a text console connection between the guest and host"
 msgstr ""
 
 #: ../virtinst/cli.py:631
-msgid ""
-"Configure physical USB/PCI/etc host devices to be shared with the guest"
+msgid "Configure physical USB/PCI/etc host devices to be shared with the guest"
 msgstr ""
 
 #: ../virtinst/cli.py:634
@@ -3693,7 +3709,8 @@ msgid "Configure guest video hardware."
 msgstr "Konuk makine video donanımını yapılandır"
 
 #: ../virtinst/cli.py:659
-msgid "Configure a guest smartcard device. Ex:\n"
+msgid ""
+"Configure a guest smartcard device. Ex:\n"
 "--smartcard mode=passthrough"
 msgstr ""
 "Konuk makine akıllı kart aygıtını yapılandır. Ör:\n"
@@ -3706,22 +3723,26 @@ msgid ""
 msgstr ""
 
 #: ../virtinst/cli.py:665
-msgid "Configure a guest memballoon device. Ex:\n"
+msgid ""
+"Configure a guest memballoon device. Ex:\n"
 "--memballoon model=virtio"
 msgstr ""
 
 #: ../virtinst/cli.py:668
-msgid "Configure a guest TPM device. Ex:\n"
+msgid ""
+"Configure a guest TPM device. Ex:\n"
 "--tpm /dev/tpm"
 msgstr ""
 
 #: ../virtinst/cli.py:671
-msgid "Configure a guest RNG device. Ex:\n"
+msgid ""
+"Configure a guest RNG device. Ex:\n"
 "--rng /dev/random"
 msgstr ""
 
 #: ../virtinst/cli.py:674
-msgid "Configure a guest panic device. Ex:\n"
+msgid ""
+"Configure a guest panic device. Ex:\n"
 "--panic default"
 msgstr ""
 
@@ -5216,9 +5237,11 @@ msgid "Architecture options"
 msgstr ""
 
 #: ../ui/create.ui.h:16
-msgid "Error message\n"
+msgid ""
+"Error message\n"
 "bar"
-msgstr "Hat mesaji\n"
+msgstr ""
+"Hat mesaji\n"
 "çubuğu"
 
 #: ../ui/create.ui.h:19
@@ -6995,7 +7018,8 @@ msgid "CPU _default:"
 msgstr ""
 
 #: ../ui/preferences.ui.h:21
-msgid "Add Spice _USB\n"
+msgid ""
+"Add Spice _USB\n"
 "Redirection:"
 msgstr ""
 
